--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
         <form id="upload-form" enctype="multipart/form-data" class="hide">
           <h2>Firmware Update Form</h2>
           <label for="file">Upload firmware:</label>  
-          <input type="file" name="file" multiple>
+          <input type="file" name="file" required multiple>
           <input type="submit" value="Upload Files" class="formButton">
           <svg viewBox="0 0 100 30" class="loadingSvg hide" >
               <circle fill="#fff" stroke="none" cx="20" cy="15" r="10" class="circle1" />
