added progress par animation

--- a/public/index.html
+++ b/public/index.html
@@ -74,6 +74,9 @@
                 <circle fill="#fff" stroke="none" cx="80" cy="15" r="10" class="circle3" />
             </svg>
             <p>Estimated Time for Update : 30 seconds</p>
+            <div class="progressBarContainer">
+              <div class="progressBar"></div>
+            </div>
           </div>
           <div id="updateSuccessContainer" class="updateSuccessContainer hide">
             <p id="updateSuccessText"></p>
